methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:17: error: not found: value sePlace
  sePlace()
  ^